business content update

--- a/src/_includes/partials/services.html
+++ b/src/_includes/partials/services.html
@@ -21,7 +21,7 @@
       href="#bundles"
       class="service-block__link classic-link tab-element-page"
     >
-      View plans
+      Book Now
     </a>
   </div>
   {% endfor %} {% include "./cta-wrapper.html" %}
