--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -9,7 +9,7 @@
   </a>
   {% endif %}
   <small class="copyright">
-    <span>&copy;<time class="year-text"></time> Sacred Breath Alchemy</span>
+    <span>&copy;<time class="year-text"></time> Flavors of Alchemy</span>
     <span class="lg-screen-and-up" aria-hidden="true">|</span>
     <span class="lg-screen-and-up">All Rights Reserved</span>
   </small>
