--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -1023,6 +1023,7 @@ ul.classic-list {
 }
 .cta-wrapper .cta-1 {
   position: relative;
+  font-weight: 600;
   border: 2px solid var(--primary-font-color);
   padding: 12px 24px;
   transition: 0.5s cubic-bezier(1, 0.07, 0.2, 1);
@@ -1154,6 +1155,7 @@ ul.classic-list {
 
 .classic-link {
   position: relative;
+  font-weight: 600;
   padding: 4px 8px;
 }
 .classic-link::before {
