--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -7,56 +7,44 @@
     aria-label="Click to close the discount banner"
     role="button"
   >
-    <p class="header-banner__message" aria-label="{{ header.banner_message }}">
+    <p class="header-banner__message" aria-label="hello">
       <!-- revisit and refactor with javascript -->
       <span class="marquee-slider" aria-hidden="true">
-        <span class="message-text"> {{ header.banner_message }}&nbsp;</span>
+        <span class="message-text"> hello&nbsp;</span>
         <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text"> {{ header.banner_message }}&nbsp;</span>
+        <span class="message-text"> hello&nbsp;</span>
         <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text"> {{ header.banner_message }}&nbsp;</span>
+        <span class="message-text"> hello&nbsp;</span>
         <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text md-screen-and-up">
-          {{ header.banner_message }}&nbsp;
-        </span>
+        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
         <span class="alchemy-symbol md-screen-and-up">
           {{ header.banner_spacer_symbol }}
         </span>
-        <span class="message-text md-screen-and-up">
-          {{ header.banner_message }}&nbsp;
-        </span>
+        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
         <span class="alchemy-symbol md-screen-and-up">
           {{ header.banner_spacer_symbol }}
         </span>
-        <span class="message-text md-screen-and-up">
-          {{ header.banner_message }}&nbsp;
-        </span>
+        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
         <span class="alchemy-symbol md-screen-and-up">
           {{ header.banner_spacer_symbol }}
         </span>
       </span>
       <span class="marquee-slider" aria-hidden="true">
-        <span class="message-text"> {{ header.banner_message }}&nbsp;</span>
+        <span class="message-text"> hello&nbsp;</span>
         <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text"> {{ header.banner_message }}&nbsp;</span>
+        <span class="message-text"> hello&nbsp;</span>
         <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text"> {{ header.banner_message }}&nbsp;</span>
+        <span class="message-text"> hello&nbsp;</span>
         <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text md-screen-and-up">
-          {{ header.banner_message }}&nbsp;
-        </span>
+        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
         <span class="alchemy-symbol md-screen-and-up">
           {{ header.banner_spacer_symbol }}
         </span>
-        <span class="message-text md-screen-and-up">
-          {{ header.banner_message }}&nbsp;
-        </span>
+        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
         <span class="alchemy-symbol md-screen-and-up">
           {{ header.banner_spacer_symbol }}
         </span>
-        <span class="message-text md-screen-and-up">
-          {{ header.banner_message }}&nbsp;
-        </span>
+        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
         <span class="alchemy-symbol md-screen-and-up">
           {{ header.banner_spacer_symbol }}
         </span>
