--- a/src/_includes/partials/nav.html
+++ b/src/_includes/partials/nav.html
@@ -23,19 +23,9 @@
       <li>
         <a
           class="classic-link nav-footer-link tab-element-nav"
-          href="{{ settings.url }}/admin"
+          href="{{ settings.url }}admin"
         >
           Admin Login
-        </a>
-      </li>
-      <li>
-        <a class="classic-link nav-footer-link tab-element-nav" href="#">
-          Privacy Policy
-        </a>
-      </li>
-      <li>
-        <a class="classic-link nav-footer-link tab-element-nav" href="#">
-          Terms & Conditions
         </a>
       </li>
     </ul>
