--- a/src/static/styles/pages/_home.scss
+++ b/src/static/styles/pages/_home.scss
@@ -35,7 +35,6 @@
   }
 
   .h1 {
-    // width: min(88vw, 1440px); // for GLOBAL SLIDER TEXT
     text-align: center;
 
     // // GLOBAL
@@ -259,7 +258,7 @@
     @include column-start(flex-start);
     gap: 16px;
     flex: 1 1 400px; /* flex-grow | flex-shrink | flex-basis, min width before wrapping */
-    max-width: 49%;
+    // max-width: 49%;
     border: 2px solid var(--primary-font-color);
     padding: $card-padding;
 
@@ -316,7 +315,7 @@
 
     &.full-width {
       flex: 2 1 $content-width; /* flex-grow | flex-shrink | flex-basis, min width before wrapping */
-      max-width: unset;
+      // max-width: unset;
     }
   }
 }
