--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -2,55 +2,21 @@
   <!-- prettier-ignore -->
   {% if path == "home" %} 
   {% if header.banner_toggle %}
-  <div
+  <button
     class="header-banner tab-element-page"
     aria-label="Click to close the discount banner"
-    role="button"
   >
-    <p class="header-banner__message" aria-label="hello">
-      <!-- revisit and refactor with javascript -->
+    <p class="header-banner__message" aria-label="{{ header.banner_message }}">
       <span class="marquee-slider" aria-hidden="true">
-        <span class="message-text"> hello&nbsp;</span>
+        <span class="message-text"> {{ header.banner_message }}&nbsp;</span>
         <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text"> hello&nbsp;</span>
-        <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text"> hello&nbsp;</span>
-        <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
-        <span class="alchemy-symbol md-screen-and-up">
-          {{ header.banner_spacer_symbol }}
-        </span>
-        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
-        <span class="alchemy-symbol md-screen-and-up">
-          {{ header.banner_spacer_symbol }}
-        </span>
-        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
-        <span class="alchemy-symbol md-screen-and-up">
-          {{ header.banner_spacer_symbol }}
-        </span>
       </span>
       <span class="marquee-slider" aria-hidden="true">
-        <span class="message-text"> hello&nbsp;</span>
+        <span class="message-text"> {{ header.banner_message }}&nbsp;</span>
         <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text"> hello&nbsp;</span>
-        <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text"> hello&nbsp;</span>
-        <span class="alchemy-symbol">{{ header.banner_spacer_symbol }}</span>
-        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
-        <span class="alchemy-symbol md-screen-and-up">
-          {{ header.banner_spacer_symbol }}
-        </span>
-        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
-        <span class="alchemy-symbol md-screen-and-up">
-          {{ header.banner_spacer_symbol }}
-        </span>
-        <span class="message-text md-screen-and-up"> hello&nbsp; </span>
-        <span class="alchemy-symbol md-screen-and-up">
-          {{ header.banner_spacer_symbol }}
-        </span>
       </span>
     </p>
-  </div>
+  </button>
   <!-- prettier-ignore -->
   {% endif %} 
   {% endif %}
