--- a/src/static/styles/_utility.scss
+++ b/src/static/styles/_utility.scss
@@ -1,10 +1,9 @@
 .classic-link {
-  $link-hover-color: var(--primary-accent-color);
   $link-horizontal-padding: 8px;
 
   position: relative;
-  font-weight: 600;
   padding: 4px $link-horizontal-padding;
+  font-weight: var(--link-weight);
 
   &::before {
     content: "";
@@ -23,11 +22,11 @@
 
   &:hover,
   &:focus-visible {
-    color: $link-hover-color;
+    color: var(--primary-accent-color);
     transition: color 0.3s ease 0.3s;
 
     &::before {
-      background: $link-hover-color;
+      background: var(--primary-accent-color);
       left: auto;
       right: $link-horizontal-padding;
       width: 0%;
@@ -43,12 +42,12 @@
 
 .text-stroke {
   -webkit-text-stroke: 2px var(--primary-font-color);
-  // color: transparent; // ✕ WAVE A11Y Contrast Error
+  color: transparent; // ✕ WAVE A11Y Contrast Error
 
-  color: var(--background-color); // ✓ Passes WAVE A11Y Error
-  background-color: var(--primary-font-color);
-  background-clip: text;
-  -webkit-background-clip: text;
+  // color: var(--background-color); // ✓ Passes WAVE A11Y Error
+  // background-color: var(--primary-font-color);
+  // background-clip: text;
+  // -webkit-background-clip: text;
 
   @include mq-max("md") {
     -webkit-text-stroke-width: 1px;
