file clean up and og image

--- a/src/_includes/app.html
+++ b/src/_includes/app.html
@@ -14,9 +14,9 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://sacredbreathalchemy.netlify.app/static/img/open-graph-image.png"
+      content="https://flavorsofalchemy.netlify.app/static/img/open-graph-image.png"
     />
-    <meta property="og:url" content="https://sacredbreathalchemy.netlify.app" />
+    <meta property="og:url" content="https://flavorsofalchemy.netlify.app" />
     <meta property="og:description" content="{{ description }}" />
     <meta property="og:site_name" content="{{ author }}" />
 
@@ -44,15 +44,13 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Flavors of Alchemy",
-        "url": "https://sacredbreathalchemy.netlify.app",
-        "logo": "https://sacredbreathalchemy.netlify.app/static/img/logo-light.svg",
-        "image": "https://sacredbreathalchemy.netlify.app/static/img/open-graph-image.png",
-        "sameAs": [
-          "https://www.instagram.com/sacredbreathalchemy?igshid=MzMyNGUyNmU2YQ%3D%3D&utm_source=qr"
-        ],
+        "url": "https://flavorsofalchemy.netlify.app",
+        "logo": "https://flavorsofalchemy.netlify.app/static/img/logo-light.svg",
+        "image": "https://flavorsofalchemy.netlify.app/static/img/open-graph-image.png",
+        "sameAs": ["https://www.instagram.com/flavorsofalchemy"],
         "contactPoint": {
           "@type": "ContactPoint",
-          "email": "info@axyscreative.com",
+          "email": "info@flavorsofalchemy.netlify.app",
           "contactType": "Support"
         }
       }
